# sound_record

./: .gitignore  CMakeLists.txt  README.md  deploy_to_board.sh  mic_in_config.sh  mic_in_config_usb.sh  run.sh  run_server.sh
libasr/: CMakeLists.txt  asr.cpp  asr.h
libaudio/: CMakeLists.txt  audio.c  audio.cpp  audio.h  audio_player.cpp  audio_player.h  audio_player_class.cpp  audio_player_class.h  ringbuffer.cpp  ringbuffer.hpp
libllm/: CMakeLists.txt  chat_agent.cpp  chat_agent.h  llm.cpp  llm.h
libnet/: CMakeLists.txt  net.c  net.h
libtts/: CMakeLists.txt  audio_player_class.h  tts.cpp  tts.h  tts_model.cpp  tts_model.h  tts_pipeline.cpp  tts_pipeline.h  tts_queue.cpp  tts_queue.h  tts_test.cpp
scripts/: download_models.sh
server/: CMakeLists.txt  server.py  stream_receiver.cpp  stream_receiver.h
src/: CMakeLists.txt  key.c  key.h  led.c  led.h  main.c
